add branche - test and pull request to github

--- a/.classpath
+++ b/.classpath
@@ -13,20 +13,50 @@
 	</classpathentry>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
+			<attribute name="test" value="true"/>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+	<classpathentry exported="true" kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="C:/Users/igor/.m2/repository/org/freemarker/freemarker/2.3.26-incubating/freemarker-2.3.26-incubating.jar" sourcepath="C:/Users/igor/.m2/repository/org/freemarker/freemarker/2.3.26-incubating/freemarker-2.3.26-incubating-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="org.eclipse.jst.component.archivename" value="freemarker-2.3.26-incubating.jar"/>
+			<attribute name="maven.groupId" value="org.freemarker"/>
+			<attribute name="maven.artifactId" value="freemarker"/>
+			<attribute name="maven.version" value="2.3.26-incubating"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="C:/Users/igor/.m2/repository/org/apache/struts/struts2-core/2.5.18/struts2-core-2.5.18.jar" sourcepath="C:/Users/igor/.m2/repository/org/apache/struts/struts2-core/2.5.18/struts2-core-2.5.18-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="org.eclipse.jst.component.archivename" value="struts2-core-2.5.18.jar"/>
+			<attribute name="maven.groupId" value="org.apache.struts"/>
+			<attribute name="maven.artifactId" value="struts2-core"/>
+			<attribute name="maven.version" value="2.5.18"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="C:/Users/igor/.m2/repository/javax/servlet/jstl/1.2/jstl-1.2.jar" sourcepath="C:/Users/igor/.m2/repository/javax/servlet/jstl/1.2/jstl-1.2-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="org.eclipse.jst.component.archivename" value="jstl-1.2.jar"/>
+			<attribute name="maven.groupId" value="javax.servlet"/>
+			<attribute name="maven.artifactId" value="jstl"/>
+			<attribute name="maven.version" value="1.2"/>
+			<attribute name="maven.scope" value="compile"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
